--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ cached-property==1.5.2
 cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
+click==8.0.1
+colorama==0.4.4
 cycler==0.10.0
+Flask==2.0.1
 flatbuffers==1.12
 gast==0.3.3
 google-auth==1.28.0
@@ -14,11 +17,14 @@ grpcio==1.32.0
 h5py==2.10.0
 idna==2.10
 importlib-metadata==3.10.0
+itsdangerous==2.0.1
+Jinja2==3.0.1
 joblib==1.0.1
 Keras==2.4.3
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 Markdown==3.3.4
+MarkupSafe==2.0.1
 matplotlib==3.3.4
 numpy==1.19.5
 oauthlib==3.1.0
@@ -45,6 +51,6 @@ termcolor==1.1.0
 threadpoolctl==2.1.0
 typing-extensions==3.7.4.3
 urllib3==1.26.4
-Werkzeug==1.0.1
+Werkzeug==2.0.1
 wrapt==1.12.1
 zipp==3.4.1
