--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ matplotlib==3.4.2
 numpy==1.20.3
 oauthlib==3.1.1
 opencv-python==4.5.2.54
+opencv-python-headless==4.2.0.32
 opt-einsum==3.3.0
 Pillow==8.2.0
 protobuf==3.17.2
