--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,7 @@
 [build]
-  command = "pip install -r requirements.txt"  # Adjust the build command based on the project requirements
+command = "pip install -r requirements.txt && npm run build"
+publish = "/build"
+functions = "./functions"
+
+[build.environment]
+PYTHON_VERSION = "3.8"
