--- a/requirements.txt
+++ b/requirements.txt
@@ -45,8 +45,8 @@ scikit-learn==0.24.2
 scipy==1.6.3
 six==1.16.0
 tensorboard==2.0.2
-tensorflow==2.0.0
-tensorflow-estimator==2.0.1
+tensorflow
+tensorflow-estimator
 termcolor==1.1.0
 threadpoolctl==2.1.0
 typing-extensions==3.10.0.0
@@ -55,4 +55,3 @@ Werkzeug==2.0.1
 wrapt==1.12.1
 zipp==3.4.1
 gunicorn
-serverless-wsgi
