--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ MarkupSafe==2.0.1
 matplotlib==3.4.2
 numpy==1.20.3
 oauthlib==3.1.1
-opencv-python==4.5.2.54
+opencv-python
 opencv-python-headless==4.2.0.32
 opt-einsum==3.3.0
 Pillow==8.2.0
