--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ matplotlib==3.4.2
 numpy==1.20.3
 oauthlib==3.1.1
 opencv-python
-opencv-python-headless==4.2.0.32
+opencv-python-headless
 opt-einsum==3.3.0
 Pillow==8.2.0
 protobuf==3.17.2
