--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-Flask==2.0.1
-joblib==1.0.1
-Keras==2.3.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-matplotlib==3.4.2
-numpy==1.20.3
+Flask
+joblib
+Keras
+Keras-Applications
+Keras-Preprocessing
+matplotlib
+numpy
 opencv-python
 opencv-python-headless
-Pillow==8.2.0
-protobuf==3.17.2
-requests==2.25.1
+Pillow
+protobuf
+requests
 tensorflow
 tensorflow-estimator
-urllib3==1.26.5
+urllib3
 gunicorn
