--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-command = "pip install -r requirements.txt && npm run build"
+command = "pip install -r requirements.txt"
 publish = "/build"
 functions = "./functions"
 
